@@ -56,23 +56,6 @@
 			[/row]
 
 			[row]
-				grow_factor = 0
-
-				[column]
-					border = "all"
-					border_size = 5
-					horizontal_alignment = "left"
-					[label]
-						definition = "default"
-						label = _ "The new theme will take effect after loading or starting a new game."
-						wrap = true
-					[/label]
-
-				[/column]
-
-			[/row]
-
-			[row]
 				grow_factor = 1
 
 				[column]
