@@ -27,6 +27,7 @@ Version 1.13.7+dev:
    * Improved Hotkey category sorting interface in Preferences.
    * Improved Addon Manager and MP Staging interfaces at low resolutions.
    * Fixed bug that allows you to use the minimap to bypass view locking
+   * You can now change the theme (in preferences) while a game is in progress.
  * WML Engine:
    * Add base_income key to [store_side]
    * Fix issues with alpha animations on hidden units (#14503)
